--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ label {
 
 .container {
     width: 1000px;
-    height:1200px;
+    height:1400px;
     background-color: rgb(99, 86, 110); 
 }
 
@@ -26,6 +26,12 @@ label {
     margin: 8px 8px 8px 8px;
     font-size: 13px;
     background-color: rgb(228, 207, 20);
+}
+
+#picture {
+
+    margin: 8px 8px 8px 8px;
+    border: 2px solid rgb(52, 43, 61);
 }
 
 .btn {
